--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>NyN Solares</title>
+        <title>Aplicación NyN</title>
     </head>
     <body>
         <div id="app"></div>
-
-        <script src="index.js"></script>
     </body>
 </html>
